// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformTextStyleProperties letterSpacing "50%" 1`] = `
Object {
  "letterSpacing": Object {
    "unit": "PERCENT",
    "value": 50,
  },
}
`;

exports[`transformTextStyleProperties letterSpacing 1.4 1`] = `
Object {
  "letterSpacing": Object {
    "unit": "PIXELS",
    "value": 1.4,
  },
}
`;

exports[`transformTextStyleProperties lineHeight "50%" 1`] = `
Object {
  "lineHeight": Object {
    "unit": "PERCENT",
    "value": 50,
  },
}
`;

exports[`transformTextStyleProperties lineHeight 1.4 1`] = `
Object {
  "unit": "PERCENT",
  "value": 140,
}
`;

exports[`transformTextStyleProperties lineHeight auto 1`] = `
Object {
  "lineHeight": Object {
    "unit": "AUTO",
  },
}
`;

exports[`transformTextStyleProperties text shadow 1`] = `
Object {
  "effects": Array [
    Object {
      "blendMode": "NORMAL",
      "color": Object {
        "a": 1,
        "b": 0,
        "g": 0,
        "r": 0,
      },
      "offset": Object {
        "x": 10,
        "y": 20,
      },
      "radius": 15,
      "type": "DROP_SHADOW",
      "visible": true,
    },
  ],
}
`;

exports[`transformTextStyleProperties textAlign auto 1`] = `Object {}`;

exports[`transformTextStyleProperties textAlign center 1`] = `
Object {
  "textAlignHorizontal": "CENTER",
}
`;

exports[`transformTextStyleProperties textAlign justify 1`] = `
Object {
  "textAlignHorizontal": "JUSTIFIED",
}
`;

exports[`transformTextStyleProperties textDecorationLine line-through 1`] = `
Object {
  "textDecorationLine": "STRIKETHROUGH",
}
`;
